--- a/dubbo-rpc/pom.xml
+++ b/dubbo-rpc/pom.xml
@@ -40,5 +40,6 @@
         <module>dubbo-rpc-memcached</module>
         <module>dubbo-rpc-redis</module>
         <module>dubbo-rpc-rest</module>
+        <module>dubbo-rpc-xml</module>
     </modules>
 </project>
