--- a/dubbo-all/pom.xml
+++ b/dubbo-all/pom.xml
@@ -506,7 +506,7 @@
                                     <include>org.apache.dubbo:dubbo-rpc-memcached</include>
                                     <include>org.apache.dubbo:dubbo-rpc-redis</include>
                                     <include>org.apache.dubbo:dubbo-rpc-rest</include>
-                                    <include>org.apache.dubbo:dubbo-rpc-xmlrpc</include>
+                                    <include>org.apache.dubbo:dubbo-rpc-xml</include>
                                     <include>org.apache.dubbo:dubbo-filter-validation</include>
                                     <include>org.apache.dubbo:dubbo-filter-cache</include>
                                     <include>org.apache.dubbo:dubbo-cluster</include>
