--- a/dubbo-dependencies-bom/pom.xml
+++ b/dubbo-dependencies-bom/pom.xml
@@ -144,6 +144,7 @@
         <metrics_version>2.0.1</metrics_version>
         <gson_version>2.8.5</gson_version>
         <jsonrpc_version>1.2.0</jsonrpc_version>
+        <portlet_version>2.0</portlet_version>
     </properties>
 
     <dependencyManagement>
@@ -538,6 +539,11 @@
                 <groupId>com.github.briandilley.jsonrpc4j</groupId>
                 <artifactId>jsonrpc4j</artifactId>
                 <version>${jsonrpc_version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.portlet</groupId>
+                <artifactId>portlet-api</artifactId>
+                <version>${portlet_version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
