--- a/dubbo-config/dubbo-config-spring/src/test/resources/META-INF/dubbo-provider.properties
+++ b/dubbo-config/dubbo-config-spring/src/test/resources/META-INF/dubbo-provider.properties
@@ -17,6 +17,7 @@ dubbo.application.name = dubbo-demo-application
 ### <dubbo:registry id="my-registry" address="N/A"/>
 dubbo.registry.id = my-registry
 dubbo.registry.address = N/A
+dubbo.registry.check = false
 
 ### <dubbo:protocol name="dubbo" port="12345"/>
 dubbo.protocol.id = dubbo
