--- a/dubbo-config/dubbo-config-spring/src/test/resources/META-INF/dubbb-consumer.properties
+++ b/dubbo-config/dubbo-config-spring/src/test/resources/META-INF/dubbb-consumer.properties
@@ -7,6 +7,7 @@ demo.service.registry = my-registry
 ###  <dubbo:application name="dubbo-demo-application"/>
 dubbo.applications.dubbo-demo-application.name = dubbo-demo-application
 
-### <dubbo:registry id="my-registry" address="N/A"/>
+### <dubbo:registry id="my-registry" address="N/A" check="false"/>
 dubbo.registries.my-registry.address = N/A
 dubbo.registries.my-registry2.address = N/A
+dubbo.registry.check = false
