--- a/dubbo-config/dubbo-config-spring/src/test/resources/META-INF/dubbb-provider.properties
+++ b/dubbo-config/dubbo-config-spring/src/test/resources/META-INF/dubbb-provider.properties
@@ -14,9 +14,10 @@ demo.service.registry = my-registry
 dubbo.application.id = dubbo-demo-application
 dubbo.application.name = dubbo-demo-application
 
-### <dubbo:registry id="my-registry" address="N/A"/>
+### <dubbo:registry id="my-registry" address="N/A" check="false"/>
 dubbo.registry.id = my-registry
 dubbo.registry.address = N/A
+dubbo.registry.check = false
 
 ### <dubbo:protocol name="dubbo" port="12345"/>
 dubbo.protocol.id = dubbo
