--- a/dubbo-config/dubbo-config-spring/src/test/resources/META-INF/dubbb-consumer.properties
+++ b/dubbo-config/dubbo-config-spring/src/test/resources/META-INF/dubbb-consumer.properties
@@ -10,4 +10,5 @@ dubbo.applications.dubbo-demo-application.name = dubbo-demo-application
 ### <dubbo:registry id="my-registry" address="N/A" check="false"/>
 dubbo.registries.my-registry.address = N/A
 dubbo.registries.my-registry2.address = N/A
-dubbo.registry.check = false
+dubbo.registries.my-registry.check = false
+dubbo.registries.my-registry2.check = false
