--- a/dubbo-registry/dubbo-registry-consul/pom.xml
+++ b/dubbo-registry/dubbo-registry-consul/pom.xml
@@ -36,6 +36,12 @@
             <groupId>com.ecwid.consul</groupId>
             <artifactId>consul-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.pszymczyk.consul</groupId>
+            <artifactId>embedded-consul</artifactId>
+            <version>1.1.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
