--- a/dubbo-dependencies-bom/pom.xml
+++ b/dubbo-dependencies-bom/pom.xml
@@ -142,10 +142,7 @@
         <spring_test_version>4.3.16.RELEASE</spring_test_version>
         <junit_version>4.12</junit_version>
         <metrics_version>2.0.1</metrics_version>
-        <sofa_bolt_version>1.4.6</sofa_bolt_version>
-        <sofa_hessian_version>3.3.6</sofa_hessian_version>
-        <sofa_common_version>1.0.12</sofa_common_version>
-        <sofa_lookout_version>1.5.2</sofa_lookout_version>
+        <sofa_registry_version>5.2.0</sofa_registry_version>
         <gson_version>2.8.5</gson_version>
         <jsonrpc_version>1.2.0</jsonrpc_version>
         <portlet_version>2.0</portlet_version>
@@ -518,23 +515,14 @@
             <!-- for dubbo-registry-sofa -->
             <dependency>
                 <groupId>com.alipay.sofa</groupId>
-                <artifactId>bolt</artifactId>
-                <version>${sofa_bolt_version}</version>
+                <artifactId>registry-client-all</artifactId>
+                <version>${sofa_registry_version}</version>
             </dependency>
             <dependency>
                 <groupId>com.alipay.sofa</groupId>
-                <artifactId>hessian</artifactId>
-                <version>${sofa_hessian_version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.alipay.sofa.common</groupId>
-                <artifactId>sofa-common-tools</artifactId>
-                <version>${sofa_common_version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.alipay.sofa.lookout</groupId>
-                <artifactId>lookout-api</artifactId>
-                <version>${sofa_lookout_version}</version>
+                <artifactId>registry-test</artifactId>
+                <version>${sofa_registry_version}</version>
+                <scope>test</scope>
             </dependency>
 
             <!-- Test lib -->
