--- a/pom.xml
+++ b/pom.xml
@@ -315,7 +315,7 @@
                                 <id>license-check</id>
                                 <phase>generate-sources</phase>
                                 <goals>
-                                    <goal>aggregate-add-third-party</goal>
+                                    <goal>add-third-party</goal>
                                 </goals>
                                 <configuration>
                                     <includeOptional>false</includeOptional>
@@ -323,7 +323,7 @@
                                     <failOnMissing>true</failOnMissing>
                                     <licenseMerges>
                                         <licenseMerge>Apache License, Version 2.0|The Apache Software License, Version
-                                            2.0|ASF 2.0|Apache 2|Apache License 2.0|The Apache License, Version 2.0
+                                            2.0|ASF 2.0|Apache 2|Apache License 2.0|The Apache License, Version 2.0|The Apache Software License, Version 2.0
                                         </licenseMerge>
                                         <licenseMerge>The MIT License|MIT License</licenseMerge>
                                         <licenseMerge>The 3-Clause BSD License|New BSD License|3-Clause BSD
