--- a/dubbo-registry/dubbo-registry-multiple/pom.xml
+++ b/dubbo-registry/dubbo-registry-multiple/pom.xml
@@ -18,25 +18,21 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.dubbo</groupId>
-        <artifactId>dubbo-parent</artifactId>
+        <artifactId>dubbo-registry</artifactId>
         <version>${revision}</version>
     </parent>
-    <artifactId>dubbo-registry</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>dubbo-registry-multiple</artifactId>
+    <packaging>jar</packaging>
     <name>${project.artifactId}</name>
-    <description>The registry module of dubbo project</description>
+    <description>The multiple registry module of dubbo project</description>
     <properties>
         <skip_maven_deploy>false</skip_maven_deploy>
     </properties>
-    <modules>
-        <module>dubbo-registry-api</module>
-        <module>dubbo-registry-default</module>
-        <module>dubbo-registry-multicast</module>
-        <module>dubbo-registry-zookeeper</module>
-        <module>dubbo-registry-redis</module>
-        <module>dubbo-registry-consul</module>
-        <module>dubbo-registry-etcd3</module>
-        <module>dubbo-registry-nacos</module>
-        <module>dubbo-registry-multiple</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-registry-api</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+    </dependencies>
 </project>
