fix dependence conflict

--- a/dubbo-rpc/dubbo-rpc-native-thrift/pom.xml
+++ b/dubbo-rpc/dubbo-rpc-native-thrift/pom.xml
@@ -42,6 +42,7 @@
         <dependency>
             <groupId>org.apache.thrift</groupId>
             <artifactId>libthrift</artifactId>
+            <version>0.11.0</version>
         </dependency>
 
         <dependency>
