--- a/pom.xml
+++ b/pom.xml
@@ -319,15 +319,15 @@
                                 </goals>
                                 <configuration>
                                     <includeOptional>false</includeOptional>
-                                    <useMissingFile>true</useMissingFile>
-                                    <failOnMissing>true</failOnMissing>
+                                    <useMissingFile>false</useMissingFile>
+                                    <failOnMissing>false</failOnMissing>
                                     <licenseMerges>
                                         <licenseMerge>Apache License, Version 2.0|The Apache Software License, Version
-                                            2.0|ASF 2.0|Apache 2|Apache License 2.0|The Apache License, Version 2.0|The Apache Software License, Version 2.0
+                                            2.0|ASF 2.0|Apache 2|Apache-2.0|Apache 2.0 License|Apache 2.0|Apache License v2.0|Apache License 2.0|The Apache License, Version 2.0|The Apache Software License, Version 2.0
                                         </licenseMerge>
                                         <licenseMerge>The MIT License|MIT License</licenseMerge>
                                         <licenseMerge>The 3-Clause BSD License|New BSD License|3-Clause BSD
-                                            License|BSD|3-Clause BSD License
+                                            License|BSD|3-Clause BSD License|The New BSD License
                                         </licenseMerge>
                                     </licenseMerges>
                                 </configuration>
