--- a/dubbo-test/pom.xml
+++ b/dubbo-test/pom.xml
@@ -128,6 +128,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-rpc-native-thrift</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-rpc-memcached</artifactId>
         </dependency>
         <dependency>
