--- a/dubbo-serialization/dubbo-serialization-googlePb/pom.xml
+++ b/dubbo-serialization/dubbo-serialization-googlePb/pom.xml
@@ -14,21 +14,17 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.apache.dubbo</groupId>
         <artifactId>dubbo-serialization</artifactId>
+        <groupId>org.apache.dubbo</groupId>
         <version>${revision}</version>
     </parent>
-
     <artifactId>dubbo-serialization-googlePb</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
-    <description>The Generic-protobuf serialization module of dubbo project</description>
+    <description>The protobuf serialization module of dubbo project</description>
     <properties>
         <skip_maven_deploy>false</skip_maven_deploy>
     </properties>
