--- a/dubbo-bom/pom.xml
+++ b/dubbo-bom/pom.xml
@@ -379,6 +379,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-configcenter-nacos</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo-metadata-definition</artifactId>
                 <version>${project.version}</version>
             </dependency>
