--- a/dubbo-configcenter/pom.xml
+++ b/dubbo-configcenter/pom.xml
@@ -34,6 +34,7 @@
         <module>dubbo-configcenter-zookeeper</module>
         <module>dubbo-configcenter-apollo</module>
         <module>dubbo-configcenter-consul</module>
+        <module>dubbo-configcenter-etcd</module>
         <module>dubbo-configcenter-nacos</module>
     </modules>
 </project>
