--- a/dubbo-dependencies-bom/pom.xml
+++ b/dubbo-dependencies-bom/pom.xml
@@ -108,8 +108,7 @@
         <cxf_version>3.1.15</cxf_version>
         <thrift_version>0.12.0</thrift_version>
         <hessian_version>4.0.38</hessian_version>
-        <protobuf-java>3.6.0</protobuf-java>
-        <protobuf.java.util>3.6.0</protobuf.java.util>
+        <protobuf-java_version>3.6.0</protobuf-java_version>
         <servlet_version>3.1.0</servlet_version>
         <jetty_version>9.4.11.v20180605</jetty_version>
         <validation_version>1.1.0.Final</validation_version>
@@ -276,12 +275,12 @@
             <dependency>
                 <groupId>com.google.protobuf</groupId>
                 <artifactId>protobuf-java</artifactId>
-                <version>${protobuf-java}</version>
+                <version>${protobuf-java_version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.protobuf</groupId>
                 <artifactId>protobuf-java-util</artifactId>
-                <version>${protobuf.java.util}</version>
+                <version>${protobuf-java_version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.servlet</groupId>
