--- a/dubbo-bom/pom.xml
+++ b/dubbo-bom/pom.xml
@@ -259,6 +259,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-registry-nacos</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo-registry-sofa</artifactId>
                 <version>${project.version}</version>
             </dependency>
