--- a/dubbo-registry/dubbo-registry-etcd3/pom.xml
+++ b/dubbo-registry/dubbo-registry-etcd3/pom.xml
@@ -45,6 +45,16 @@
             <artifactId>dubbo-remoting-etcd3</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.etcd</groupId>
+            <artifactId>jetcd-launcher</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
