Polish apache/incubator-dubbo/#4096 : To add new module for Dubbo Event

--- a/dubbo-all/pom.xml
+++ b/dubbo-all/pom.xml
@@ -500,6 +500,15 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- 2.7.2 new modules -->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-event</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Transitive dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
