--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,7 @@
         <module>dubbo-metadata-report</module>
         <module>dubbo-configcenter</module>
         <module>dubbo-dependencies</module>
+        <module>dubbo-event</module>
     </modules>
 
     <dependencyManagement>
