--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,7 @@
         <module>dubbo-configcenter</module>
         <module>dubbo-dependencies</module>
         <module>dubbo-event</module>
+        <module>dubbo-metadata</module>
     </modules>
 
     <dependencyManagement>
