--- a/dubbo-event/pom.xml
+++ b/dubbo-event/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-common</artifactId>
-            <version>${revision}</version>
+            <version>${project.parent.version}</version>
             <optional>true</optional>
         </dependency>
 
