To add new module for Dubbo Event (#4099)
fixes #4096

--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,8 @@
         <module>dubbo-metadata-report</module>
         <module>dubbo-configcenter</module>
         <module>dubbo-dependencies</module>
+        <module>dubbo-event</module>
+        <module>dubbo-metadata</module>
     </modules>
 
     <dependencyManagement>
