[Dubbo-4090] Dubbo-registry support registry in kubernetes #4090.

--- a/dubbo-bom/pom.xml
+++ b/dubbo-bom/pom.xml
@@ -274,6 +274,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-registry-kubernetes</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo-monitor-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
