--- a/dubbo-registry/pom.xml
+++ b/dubbo-registry/pom.xml
@@ -39,5 +39,6 @@
         <module>dubbo-registry-nacos</module>
         <module>dubbo-registry-multiple</module>
         <module>dubbo-registry-sofa</module>
+        <module>dubbo-registry-kubernetes</module>
     </modules>
 </project>
